# csc116F17labs

./: readme.org
tutorials/01_hello_world/: 01_hello_world.org
tutorials/01_hello_world/files/lab01/part1/: CMakeLists.txt
tutorials/01_hello_world/files/lab01/part2/: CMakeLists.txt
tutorials/01_hello_world/files/lab01/part3/: CMakeLists.txt  tester.cmake
tutorials/01_hello_world/files/lab01/part3/tests/: test-01.in  test-02.expected  test-03.expected  test-03.in  test-04.expected  test-05.expected  test-05.in
tutorials/02_strings_vectors_io/: 02_IO_strings.org
tutorials/02_strings_vectors_io/lab02/part1/: CMakeLists.txt  example.txt  read_file.cpp  tester-2.cmake
tutorials/02_strings_vectors_io/lab02/part1/tests/: test-01.in  test-02.in  test-04.in
tutorials/02_strings_vectors_io/lab02/part1/tests/unix/: test-04.expected  test-05.expected
tutorials/02_strings_vectors_io/lab02/part1/tests/windows/: test-01.expected  test-02.expected  test-04.expected  test-05.expected
tutorials/02_strings_vectors_io/lab02/part2/: CMakeLists.txt  invert_file.cpp
tutorials/02_strings_vectors_io/lab02/part2/tests/: test-01.in  test-03.in  test-04.in
tutorials/02_strings_vectors_io/lab02/part2/tests/unix/: test-01.expected  test-03.expected  test-04.expected
tutorials/02_strings_vectors_io/lab02/part2/tests/windows/: test-01.expected  test-03.expected  test-04.expected  test-05.expected
tutorials/03_strings_debugging/: 03_strings_debugging.org
tutorials/03_strings_debugging/lab03/part1/: CMakeLists.txt  string_case.cpp
tutorials/03_strings_debugging/lab03/part1/tests/: test-03.in
tutorials/03_strings_debugging/lab03/part1/tests/unix/: test-01.expected  test-02.expected  test-03.expected
tutorials/03_strings_debugging/lab03/part1/tests/windows/: test-01.expected  test-02.expected  test-03.expected
tutorials/03_strings_debugging/lab03/part2/: CMakeLists.txt  read_grades.cpp
tutorials/03_strings_debugging/lab03/part2/tests/: test-01.in  test-02.in  test-03.in  test-04.in  test-05.in  test-06.in
tutorials/03_strings_debugging/lab03/part2/tests/unix/: test-01.expected  test-02.expected  test-03.expected  test-04.expected  test-05.expected  test-06.expected  test-07.expected
tutorials/03_strings_debugging/lab03/part2/tests/windows/: test-01.expected  test-02.expected  test-03.expected  test-04.expected  test-05.expected  test-06.expected  test-07.expected
tutorials/04_matrices_exceptions/: 04_matrices_exceptions.org
tutorials/04_matrices_exceptions/lab04/part1/: part1.cpp
tutorials/04_matrices_exceptions/lab04/part1/tests/unix/: test-01.expected  test-02.expected  test-03.expected
tutorials/04_matrices_exceptions/lab04/part1/tests/windows/: test-01.expected  test-02.expected  test-03.expected
tutorials/04_matrices_exceptions/lab04/part2/: CMakeLists.txt  part2.cpp
tutorials/04_matrices_exceptions/lab04/part2/tests/: test-01.in  test-02.in  test-04.in
tutorials/04_matrices_exceptions/lab04/part2/tests/unix/: test-01.expected  test-02.expected  test-03.expected  test-04.expected
tutorials/04_matrices_exceptions/lab04/part2/tests/windows/: test-01.expected  test-02.expected  test-03.expected  test-04.expected
tutorials/05_classes/: 05_classes.org
tutorials/05_classes/lab05/part1/: CMakeLists.txt  part1.cpp
tutorials/05_classes/lab05/part1/tests/: test-01.in  test-02.in  test-03.in  test-04.in
tutorials/05_classes/lab05/part2/: CMakeLists.txt  part2.cpp
tutorials/05_classes/lab05/part2/tests/: test-01.in  test-02.in  test-03.in  test-04.in  test-05.in
tutorials/06_more_classes/: 06_more_classes.org
tutorials/06_more_classes/lab06/part1/: CMakeLists.txt  matrix.cpp  matrix.hpp  part1.cpp
tutorials/06_more_classes/lab06/part1/tests/: test-01.in  test-02.in  test-03.in  test-05.in
tutorials/06_more_classes/lab06/part2/: CMakeLists.txt  matrix.cpp  part2.cpp
tutorials/06_more_classes/lab06/part2/tests/: test-03.in  test-04.in
tutorials/07_inheritance/: 07_inheritance.org
tutorials/07_inheritance/lab07/part1/: CMakeLists.txt  part1.cpp  point.cpp  point.hpp
tutorials/07_inheritance/lab07/part2/: CMakeLists.txt  part2.cpp  point.cpp  rectangle.hpp  shape.hpp  square.cpp  square.hpp
tutorials/07_inheritance/lab07/part3/: CMakeLists.txt  circle.cpp  circle.hpp  part3.cpp  rectangle.cpp  square.cpp  square.hpp
tutorials/08_memory/: 08_memory.org
tutorials/08_memory/lab08/part1/: CMakeLists.txt
tutorials/08_memory/lab08/part2/: link-list.cpp
tutorials/08_memory/lab08/part2/tests/: test-01.in
tutorials/09_templates/: 09_templates.org
tutorials/09_templates/lab09/: CMakeLists.txt  part1.cpp  part2.cpp  part3.cpp  part4.cpp  tester.cmake
tutorials/09_templates/lab09/tests/unix/: test-01.expected  test-02.expected  test-03.expected  test-04.expected
tutorials/09_templates/lab09/tests/windows/: test-01.expected  test-02.expected  test-03.expected  test-04.expected
tutorials/10_lambdas/: 10_lambdas.org
tutorials/10_lambdas/lab10/part1/: CMakeLists.txt  part1.cpp
tutorials/10_lambdas/lab10/part1/tests/: test-01.in
tutorials/10_lambdas/lab10/part2/: CMakeLists.txt  part2.cpp  tester.cmake
tutorials/10_lambdas/lab10/part2/tests/: test-02.in  test-03.in
(+54 files in other folders)
